# automation-exercise-website-tests

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
pages/: __init__.py  account_information_page.py  account_status_page.py  base_page.py  cart_modal.py  cart_page.py  contact_us_page.py  home_page.py  product_detail_page.py  products_page.py  signup_login_page.py
tests/: __init__.py  conftest.py  test_checkout.py  test_contact.py  test_navigation_smoke.py
tests/api/: api_models.py  test_api.py
